minor tweaks to donation landing page

--- a/members/templates/donation/donation_landing_page.html
+++ b/members/templates/donation/donation_landing_page.html
@@ -166,7 +166,7 @@ input.donation-box::-webkit-outer-spin-button {
                
               {%  if not request.user.is_authenticated%}
               <hr style="width: 100%;">
-                <p style="font-size: 0.88rem; color: gray; font-family: 'Lato',sans-serif;">Consider <a href="{% url 'register_user' %}" style="color: gray;"> signing up for free </a> to track your donations and recieve updates on projects you've funded.</p>
+                <p style="font-size: 0.88rem; color: gray; font-family: 'Lato',sans-serif;">Consider <a href="{% url 'register_user' %}" style="color: gray;"> signing up for free </a> to <strong>track your donations</strong> and <strong>recieve updates</strong> on projects you've funded.</p>
                 <hr style="width: 100%;">
                    <div class="nunu"> 
                           <div class="bab">
