--- a/members/static/styleindex.css
+++ b/members/static/styleindex.css
@@ -8,10 +8,11 @@
     top: 14px;
     left: 50%;
     transform: translateX(-50%);
-   
+  
 }
 .logo img{
     width: 100%;
+  
     
 }
 
@@ -25,6 +26,7 @@
     list-style: none;
     margin: auto;
     height: 5.6rem;
+  
   
   }
   
@@ -49,6 +51,7 @@ li:hover{
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   left: 0;
   top: 0;
+  z-index: 999;
 }
 
 
@@ -177,7 +180,7 @@ h1 {
 .cool-transition {
   font-family: 'Lato', sans-serif;
   font-weight: 600;
-  color: #f1f1f1;
+  color: #181313;
   margin-bottom: 0em;
 }
 .overall{
@@ -198,6 +201,45 @@ h1 {
 .hidden{
   display: none;
 }
+
+footer {
+  background-color: #f4f4f4;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  overflow-x:auto;
+  padding-top: 20px;
+  margin-bottom: 0;
+  z-index: 999;
+  
+}
+
+footer p {
+  margin: 0;
+  font-size: 14px;
+}
+
+footer ul {
+  list-style: none;
+  padding: 0;
+  margin-top: 10px;
+}
+
+footer ul li {
+  font-size: 14px;
+  display: inline;
+  margin-right: 10px;
+}
+
+footer ul li a {
+  text-decoration: none;
+  color: #333;
+}
+
 
 
 
@@ -461,13 +503,6 @@ background-attachment: fixed;
   .lichenbgg{
     background-image: none;
   }
-  body{
-
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    background-attachment: fixed;
-    background-position: center center;
-  }
 }
 
 
@@ -519,13 +554,7 @@ background-attachment: fixed;
   }
 }
 @media(max-width:465px){
-  body{
 
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-
-    background-position: center center;
-  }
 }
 @media(max-width:392px){
 .vinsmoke{
