--- a/ourtubehome/templates/index.html
+++ b/ourtubehome/templates/index.html
@@ -125,7 +125,7 @@
 <section class="content">
  <div class="overall" id="overall">
 
-  <h1 class="cool-transition">Empowering communities</h1>
+  <h1 class="cool-transition">Empowering content creators</h1>
   <h1 class="cool-transition">to change lives</h1>
   <a href="{% url 'funding_info' %}"><button class="donate-btn-btn">Start a project</button></a>
   
