--- a/members/static/testingstyles.css
+++ b/members/static/testingstyles.css
@@ -1,40 +1,50 @@
-footer {
-  background-color: #f4f4f4;
-  text-align: center;
-  width: 100%;
-  padding: 0;
-  margin: 0;
-  overflow-x:auto;
-  padding-top: 20px;
-  margin-top: 20px;
-  margin-bottom: 0;
-  z-index: 999;
-  position: relative;
+
+/* Dark overlay */
+.agreement-overlay {
+  display: none;
+  position: fixed;
+  top: 0;
   left: 0;
-  bottom: 0;
-  
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 1000;
 }
 
-footer p {
-  margin: 0;
-  font-size: 14px;
+.agreement-popup {
+  display: none;
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  z-index: 1001;
+  border: 8px solid  #69dded ;
 }
 
-footer ul {
-  list-style: none;
-  padding: 0;
+.agreeCheckbox {
+  margin-right: 5px;
+}
+
+#confirmAgreement {
   margin-top: 10px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 5px 15px;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
-footer ul li {
-  font-size: 14px;
-  display: inline;
-  margin-right: 10px;
-}
-
-footer ul li a {
-  text-decoration: none;
-  color: #333;
+.agreement-close {
+  position: absolute;
+  top: 0px;
+  right: 8px;
+  font-size: 25px;
+  color: #888;
+  cursor: pointer;
 }
 
 
