--- a/members/static/styleindex.css
+++ b/members/static/styleindex.css
@@ -324,7 +324,7 @@ background-attachment: fixed;
 }
 .fuck{
   color: black;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Raleway', sans-serif; font-weight: 600;
   font-weight: 600;
   font-size: large;
 }
