--- a/members/static/testingstyles.css
+++ b/members/static/testingstyles.css
@@ -126,7 +126,7 @@
 .instagram-share-instructions {
   font-size: 1.1rem;
 
-  font-family: 'Lato', sans-serif;   color: #000000; font-weight: 600;
+  font-family: 'Lato', sans-serif;   color: #000000; font-weight: 400;
   text-align: left;
   margin-bottom: 8px;
   margin-top: 8px;
@@ -767,7 +767,7 @@ font-family: 'Roboto', sans-serif;
   position: absolute; top: 310px; left:5%
 }
 .title-update{
-  font-family: 'Lato', sans-serif;   color: #000000; font-weight: 600;
+  font-family: 'Lato', sans-serif;   color: #000000; font-weight: 400;
   font-size: 1.8rem; margin-top: 0.3em; margin-bottom: 0.5em;
 }
 
@@ -902,10 +902,10 @@ font-family: 'Roboto', sans-serif;
 
 
 .pforfundinggoal{
-  font-size: 1rem; color: gray; font-family: 'Lato', sans-serif;
+  font-size: 1rem; color: gray; font-family: 'Lato', sans-serif; font-weight: 400;
 }
 .pforfundinggoal-phone{
-  font-size: 1.2rem; color: gray; font-family: 'Lato', sans-serif; margin: 0; 
+  font-size: 1.2rem; color: gray; font-family: 'Lato', sans-serif; margin: 0; font-weight: 400;
 }
 
 
@@ -938,6 +938,7 @@ font-family: 'Roboto', sans-serif;
   width: 24vw;
   height: 50px;
   font-family: 'Lato', sans-serif;
+  font-weight: 400;
   font-size: 1.2rem;
   color: #ffffff;
   border: none;
@@ -955,6 +956,7 @@ font-family: 'Roboto', sans-serif;
   width: 100%;
   height: 50px;
   font-family: 'Lato', sans-serif;
+  font-weight: 400;
   font-size: 1.2rem;
   color: #ffffff;
   border: none;
@@ -998,10 +1000,10 @@ font-family: 'Roboto', sans-serif;
 }
 
 .donation-text {
-  margin: 0; font-family: 'Lato', sans-serif;
+  margin: 0; font-family: 'Lato', sans-serif; font-weight: 400;
 }
 .donation-text-phone {
-  margin: 0; font-family: 'Lato', sans-serif; font-size: 1.5rem;
+  margin: 0; font-family: 'Lato', sans-serif; font-size: 1.5rem; font-weight: 400;
 }
 
 .loda {
@@ -1069,6 +1071,7 @@ text-align: center;
 cursor: pointer;
 transition: background-color 0.3s;
 font-family: 'Lato', sans-serif;
+font-weight: 400;
 font-size: 1rem;
 }
 
@@ -1367,7 +1370,7 @@ header{
   position: relative; top: 35px;
 }
 .total-donations{
-  font-size: 1.45rem; font-family: 'Lato', sans-serif; margin: 0; align-self: flex-end;
+  font-size: 1.45rem; font-family: 'Lato', sans-serif; margin: 0; align-self: flex-end; font-weight: 400;
 }
 
 .update-title-input {
@@ -1547,7 +1550,7 @@ header{
     margin: -2vw;
   }
   .titss{
-    font-family: 'Lato', sans-serif; font-size: 1.4rem; margin-left: 10px; margin-right: 10px; font-weight: 300;
+    font-family: 'Lato', sans-serif; font-size: 1.4rem; margin-left: 10px; margin-right: 10px; font-weight: 400;
   }
      
   .col-md-4 {
@@ -1851,7 +1854,7 @@ header{
     top: 70px;
   }
   .donation-text-phone {
-    margin: 0; font-family: 'Lato', sans-serif; font-size: 1.3rem;
+    margin: 0; font-family: 'Lato', sans-serif; font-size: 1.3rem; font-weight: 400;
   }
   .pforfundinggoal-phone{
     font-size: 0.95rem;
