--- a/members/static/styleindex.css
+++ b/members/static/styleindex.css
@@ -178,9 +178,9 @@ h1 {
 
 }
 .cool-transition {
-  font-family: 'Lato', sans-serif;
-  font-weight: 400;
-  color: #181313;
+  font-family: 'Playfair Display', serif;
+  font-weight: 600;
+  color: #000;
   margin-bottom: 0em;
 }
 .overall{
