--- a/members/static/stylingandallahh.css
+++ b/members/static/stylingandallahh.css
@@ -1,6 +1,58 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
 
+.mission{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 25px;
+  justify-content: center;
+  z-index: 1;
+}
+.mission-header{
+  display: flex;
+  width:100vw;
+  height: 100vh;
+  text-align: center;
+  justify-content: center;
+  justify-self: center;
+  color: #fff;
+  background-image: url('ripple.jpg.jpg');
+  background-size: 100% 100%;
+}
+.missionairy{
+  font-size: 34px; font-family: 'Playfair Display', serif; justify-self: center; align-self: center; color: black; position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%); width: 95vw;
+}
+
+.mission-details-one{
+  width: 80%;
+  line-height: 2;
+  align-self: center;
+  justify-self: center;
+}
+.mission-boxes-area{
+  width: 80%;
+  background-color: #ccc;
+  height: 70vh;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 20px;
+}
+.key-feature-container{
+  background-color: white;
+
+  width: 30%;
+  height: 100%;
+  margin:0 auto;
+}
+.ripple{
+  width: 100vw;
+  height:70vh;
+  margin: 0;
+  padding: 0;
+  
+}
 .logo{
     width: 150px;
     height: 150px;
@@ -42,7 +94,7 @@ li:hover{
 .navbar-testing {
   background-color: #42c09e;
   width: 100.5%;
-  
+  z-index: 999;
   position: fixed;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   left: 0;
@@ -128,7 +180,7 @@ li:hover{
 }
 
 .exp{
-  width: 90%; height:auto;
+  width: 40%; height:auto;
 }
 .juice{
   display: flex; flex-direction: row; margin: 0; align-items: center; gap: 0px;
@@ -144,10 +196,6 @@ flex-direction: column; margin-left: 5%; gap:20px; display: none; margin-right: 
 
 body::-webkit-scrollbar {
   width: 0.5rem;
-}
-
-main{
-  margin-top: 5rem;
 }
 
 
@@ -200,9 +248,7 @@ h1 {
   }
 }
 
-body{
-  margin-top: 8rem;
-}
+
 .lichenbgg{
   display: flex;
   flex-direction: column;
@@ -394,6 +440,9 @@ footer ul li a {
 .headingstyle{
   font-size: 1.8rem;
 }
+.missionairy{
+  font-size: 30px;
+}
 }
 @media(max-width:890px){
   .juice{
@@ -407,6 +456,9 @@ footer ul li a {
     align-self: center;
   
   }
+  .missionairy{
+    font-size: 27px;
+  }
 }
 @media(max-width:730px){
   .pstyle{
@@ -417,6 +469,9 @@ footer ul li a {
   }
   .exp{
     width: 420px;
+  }
+  .missionairy{
+    font-size: 25px;
   }
 }
 @media(max-width:635px){
@@ -429,6 +484,9 @@ footer ul li a {
   .exp{
     width: 360px;
   }
+  .missionairy{
+    font-size: 22px;
+  }
 }
 @media(max-width:480px){
   .pstyle{
@@ -440,6 +498,9 @@ footer ul li a {
   .exp{
     width: 300px;
   }
+  .missionairy{
+    font-size: 18px;
+  }
 }
 
 @media(max-width:851px){
@@ -449,9 +510,7 @@ footer ul li a {
     margin-right: 6vw;
     margin-left: 6vw;
    }
-   body{
-    margin-top: 4.8rem;
-   }
+
    h1{
     font-size: 2.5rem;
    }
@@ -494,15 +553,14 @@ footer ul li a {
   margin-left: 2rem;
 
  }
+
  .logo{
     width: 125px;
     height: 125px;
     top: 10px;
   }
 
- body{
-  margin-top: 4.4rem;
- }
+
  h1{
   font-size: 2rem;
  }
@@ -549,9 +607,7 @@ footer ul li a {
     top: 8px;
   }
 
- body{
-  margin-top: 4rem;
- }
+
  h1{
   font-size: 1.6rem;
  }
